<resources>
    <string name="app_name">WhatsApp</string>
    <string name="profile">Profil</string>
    <string name="my_name">4102 Muhammad Arizal Saputro</string>
    <string name="info">This is not your username of pin. This name will be visible to your social media contacts.</string>
    <string name="status_and_phone">Status dan telepon</string>
    <string name="my_phone">+62 856-410-30148</string>
    <string name="last_seen">Terakhir dilihat 05/08/2016</string>

    <string name="button_open">Buka profil</string>

    <string name="take_picture">Camera</string>
    <string name="from_galerry">Galeri</string>

    <string name="success_update">Photo berhasil dirubah</string>
    <string name="undo">BATAL</string>
    <string name="show_notif">Notifikasi</string>

    <string name="clear">Hapus notif</string>

</resources>
