<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/bgLayout"
tools:context="com.tumpi.tepesatu.profile.ProfileActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/linear"
    tools:context="com.tumpi.tepesatu.MainActivity">

    <RelativeLayout
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/gambar"
            android:src="@drawable/arizal"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_alt_black_24dp"
            android:onClick="takePicture"
            android:layout_alignBottom="@+id/gambar"
            android:layout_alignRight="@+id/gambar"
            android:layout_alignEnd="@+id/gambar"/>


    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:textColor="@android:color/black"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/my_name"
                android:id="@+id/textView" />


            <ImageButton
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:src="@drawable/ic_mode_edit_black_24dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/status_and_phone"
                android:id="@+id/status_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/my_phone"
                android:id="@+id/phone" />
            <include
                layout="@layout/intem_separator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/last_seen"
                android:id="@+id/last_seen" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>


</ScrollView>

